--- a/src/index.scss
+++ b/src/index.scss
@@ -197,11 +197,25 @@ h6 {
       font-size: 16px;
     }
   }
+  @media (max-width: 991px) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    background-color: rgba(20, 20, 20, 0.95);
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    &__link {
+      width: 100%;
+    }
+  }
 }
 
 //_Dropdown toggle:
 .dropdown {
   position: relative;
+  width: 100%;
 }
 .dropdown-toggle {
   cursor: pointer;
@@ -214,6 +228,9 @@ h6 {
   }
   &:hover {
     color: var(--yellow);
+  }
+  @media (max-width: 991px) {
+    justify-content: space-between;
   }
 }
 
@@ -256,5 +273,26 @@ h6 {
     &:hover {
       color: var(--yellow);
     }
+  }
+  @media (max-width: 991px) {
+    position: relative;
+    transform: translateY(0%);
+    width: 100%;
+    background-color: var(--black);
+    border-color: var(--black);
+    &__title,
+    &__link {
+      color: var(--white);
+    }
+    &__link {
+      font-size: 0.789rem;
+    }
+    &__title {
+      font-size: 1.053rem;
+    }
+  }
+  @media (max-width: 767px) {
+    grid-template-columns: 100%;
+    row-gap: 30px;
   }
 }
