--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,4 @@
+//_Header:
 .header {
   &__header-wrap {
     position: relative;
@@ -12,6 +13,7 @@
       padding: 30px 0;
     }
   }
+
   &__logo-wrap {
     display: flex;
     align-items: center;
@@ -21,24 +23,24 @@
       padding-right: 0;
     }
   }
+
   &__logo {
     padding-right: 35px;
     @media (max-width: 1280px) {
       padding-right: 20px;
     }
   }
-  &__social-links-wrap {
-    display: flex;
-    column-gap: 10px;
-  }
+
   &__nav-menu-wrap {
     position: relative;
     display: flex;
     align-items: center;
+
     @media (max-width: 991px) {
       height: 60px;
     }
   }
+
   &__btn {
     margin-left: 12px;
     padding: 13px 33px;
@@ -78,9 +80,173 @@
         height: 3px;
         background-color: var(--white);
       }
-      &[data-active='true'] {
+      &[data-active="true"] {
         background-color: var(--black);
       }
     }
+  }
+}
+
+//_Shopping cart button
+.shopping-cart-button {
+  position: relative;
+  font-size: 17px;
+  padding: toEm(8, 17) toEm(16, 17);
+  margin-top: toEm(5, 17);
+  margin-right: 1em;
+  color: var(--white);
+  transition: all 0.3s;
+  line-height: 1;
+  svg {
+    margin-right: 0.5em;
+  }
+
+  &__count {
+    position: absolute;
+    top: 0;
+    right: 6%;
+    font-size: 12px;
+    height: 1.5em;
+    min-width: 1.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    border-radius: 0.75em;
+    margin-left: toEm(9, 12);
+    line-height: 1.5em;
+    background-color: var(--yellow);
+    font-weight: var(--bold);
+    color: var(--blue);
+    text-align: center;
+  }
+
+  &:hover {
+    color: var(--yellow);
+  }
+}
+
+//_Navigation menu:
+.nav-menu {
+  display: flex;
+  align-items: center;
+  font-family: var(--f-family-primary);
+  &__link {
+    font-size: toRem(17);
+    padding: toEm(22, 17) toEm(20, 17);
+    color: var(--white);
+    font-weight: var(--medium);
+    transition: all 0.3s;
+    //! Временные стили:
+    &[data-active] {
+      color: var(--yellow);
+    }
+    //!
+    &:hover {
+      color: var(--yellow);
+    }
+
+    @media (max-width: 1280px) {
+      font-size: toRem(16);
+      padding: toEm(15, 16) toEm(20, 16);
+    }
+  }
+
+  @media (max-width: 991px) {
+    z-index: 5;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateY(100%);
+    background-color: rgba(20, 20, 20, 0.95);
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    &__link {
+      width: 100%;
+    }
+  }
+}
+
+//_Dropdown toggle:
+.dropdown {
+  position: relative;
+  width: 100%;
+  &__toggle {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    column-gap: 0.3em;
+    svg {
+      margin-top: 0.2em;
+    }
+    &:hover {
+      color: var(--yellow);
+    }
+    @media (max-width: 991px) {
+      justify-content: space-between;
+    }
+  }
+}
+//_Dropdown menu:
+.dropdown-menu {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(100%);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 445px;
+  padding: 20px 40px 30px;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 1px 1px 10px 0 rgb(0 0 0 / 17%);
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+  }
+  &__title {
+    font-family: var(--f-family-secondary);
+    color: var(--blue);
+    font-size: toRem(22);
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    text-transform: capitalize;
+    margin-bottom: 0.3em;
+  }
+  &__link {
+    transition: color 0.2s;
+    color: #1b3764;
+    font-size: toRem(17);
+    font-weight: 500;
+    padding: 0.6em 0;
+    letter-spacing: 0.01em;
+    text-transform: capitalize;
+    transition: color 0.3s;
+    &:hover {
+      color: var(--yellow);
+    }
+  }
+
+  @media (max-width: 991px) {
+    position: relative;
+    transform: translateY(0%);
+    width: 100%;
+    background-color: var(--black);
+    border-color: var(--black);
+    &__title,
+    &__link {
+      color: var(--white);
+    }
+    &__link {
+      font-size: toRem(15);
+    }
+    &__title {
+      font-size: toRem(20);
+    }
+  }
+  @media (max-width: 767px) {
+    grid-template-columns: 100%;
+    row-gap: 30px;
   }
 }
