--- a/src/components/PreviewArea/PreviewArea.scss
+++ b/src/components/PreviewArea/PreviewArea.scss
@@ -35,30 +35,28 @@
 
   &__subtitle {
     position: relative;
-    font-size: 24px;
+    font-size: toRem(24);
     font-family: var(--f-family-secondary);
     font-style: italic;
     font-weight: var(--regular);
     letter-spacing: 0.05em;
     text-transform: capitalize;
-    padding-left: 50px;
-    margin-bottom: 0.625em;
+    padding-left: toEm(50, 24);
+    margin-bottom: toEm(15, 24);
     &::after {
+      font-size: inherit;
       position: absolute;
       top: 50%;
       left: 0;
       transform: translateY(-50%);
-      content: '';
-      width: 35px;
+      content: "";
+      width: toEm(32, 24);
       height: 2px;
       background-color: var(--yellow);
     }
     @media (max-width: 767px) {
-      font-size: 22px;
+      font-size: toRem(22);
     }
-  }
-
-  &__title-wrap {
   }
 
   &__title {
@@ -66,28 +64,27 @@
     font-weight: var(--bold);
     letter-spacing: -0.02em;
     line-height: 110%;
-    margin-bottom: 0.49em;
+    margin-bottom: toEm(30, 65);
     @media (max-width: 991px) {
-      font-size: 50px;
+      font-size: toRem(50);
     }
     @media (max-width: 991px) {
-      font-size: 45px;
+      font-size: toRem(45);
     }
     @media (max-width: 479px) {
-      font-size: 32px;
+      font-size: toRem(32);
     }
   }
 
   &__content {
     font-size: 1rem;
     @media (max-width: 991px) {
-      font-size: 18px;
+      font-size: toRem(18);
     }
     @media (max-width: 991px) {
-      font-size: 17px;
+      font-size: toRem(17);
     }
     p {
-      font-family: var(--f-family-primary);
       line-height: 180%;
       color: var(--blue-middle);
     }
@@ -104,7 +101,7 @@
 
   &__btn {
     &:hover {
-      color: white;
+      color: var(--white);
     }
   }
 
@@ -119,6 +116,7 @@
     }
   }
 }
+
 .dowland-link {
   position: relative;
   color: var(--white);
@@ -132,7 +130,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    content: '';
+    content: "";
     width: 100%;
     height: 1px;
     background-color: var(--white);
@@ -152,6 +150,7 @@
   gap: 20px;
   flex-wrap: wrap;
 }
+
 .book-details-item {
   display: flex;
   column-gap: 10px;
@@ -162,15 +161,15 @@
   &__title {
     line-height: 1;
     color: #fff;
-    font-size: 24px;
+    font-size: toRem(24);
     font-weight: var(--bold);
     letter-spacing: 0.02em;
-    margin-bottom: 10px;
+    margin-bottom: toEm(10, 24);
   }
 
   &__content {
     font-family: var(--f-family-primary);
-    font-size: 18px;
+    font-size: toRem(18);
     font-weight: var(--regular);
     color: var(--blue-middle);
     line-height: 170%;
