--- a/src/index.scss
+++ b/src/index.scss
@@ -9,10 +9,7 @@
 html,
 body {
   font-size: 19px;
-}
-
-body {
-  // background-color: var(--blue);
+  font-family: var(--f-family-primary);
 }
 
 a {
@@ -28,6 +25,7 @@ ul {
   list-style: none;
 }
 
+//_Variables:
 :root {
   //_Colors:
   --black: #141414;
@@ -50,6 +48,16 @@ ul {
   --extra-bold: 800;
 }
 
+//_SCSS Functions:
+@function toRem($value) {
+  $remValue: ($value / 19) + rem;
+  @return $remValue;
+}
+
+@function toEm($pixels, $fz) {
+  @return #{$pixels/$fz}em;
+}
+
 //_Titles:
 h1,
 h2,
@@ -61,22 +69,22 @@ h6 {
   text-transform: capitalize;
 }
 h1 {
-  font-size: 3.421rem;
+  font-size: toRem(65);
 }
 h2 {
-  font-size: 2.895rem;
+  font-size: toRem(55);
 }
 h3 {
-  font-size: 2.368rem;
+  font-size: toRem(45);
 }
 h4 {
-  font-size: 1.684rem;
+  font-size: toRem(32);
 }
 h5 {
-  font-size: 1.263rem;
+  font-size: toRem(24);
 }
 h6 {
-  font-size: 1.158rem;
+  font-size: toRem(22);
 }
 
 //_Containers:
@@ -90,16 +98,21 @@ h6 {
   }
 }
 
+//_Descriptor:
+.descriptor {
+  background-color: var(--blue);
+}
+
 //_Buttons::
 .btn {
   cursor: pointer;
-  font-size: 19px;
+  font-size: 1rem;
   font-family: var(--f-family-secondary);
   text-transform: capitalize;
   line-height: 125%;
   font-weight: var(--bold);
   letter-spacing: 0.38px;
-  padding: 20px 56px;
+  padding: toEm(20, 19) toEm(56, 19);
   background-color: var(--yellow);
   color: var(--blue);
   border: 2px solid var(--yellow);
@@ -115,200 +128,43 @@ h6 {
     }
   }
   &_large {
-    padding: 20px 96px;
+    padding: toEm(20, 19) toEm(96, 19);
   }
 }
 
 //_Social network link:
-.social-link {
+.social-links {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 45px;
-  width: 45px;
-  font-size: 16px;
-  transition: all 0.3s;
-
-  @media (max-width: 479px) {
-    width: 40px;
-    height: 40px;
-  }
-  &_w {
-    color: var(--blue);
-    background-color: var(--white);
-    border: 2px solid var(--white);
-    &:hover {
-      background-color: var(--yellow);
-      border-color: var(--yellow);
-    }
-  }
-  &_b {
-    color: var(--white);
-    border: 2px solid var(--yellow);
-    background-color: transparent;
-    &:hover {
-      background-color: var(--yellow);
-    }
-  }
-}
-
-//_Shopping cart button
-.shopping-cart-button {
-  position: relative;
-  font-size: 17px;
-  padding: 9px 15px;
-  margin-top: 5px;
-  margin-right: 18px;
-  color: var(--white);
-  transition: all 0.3s;
-  line-height: 1;
-  svg {
-    margin-right: 8px;
-  }
-
-  &__count {
-    position: absolute;
-    top: 0;
-    right: 6%;
-    padding-left: 6px;
-    padding-right: 6px;
-    border-radius: 9px;
-    height: 18px;
-    line-height: 18px;
-    min-width: 18px;
-    margin-left: 8px;
-    background-color: var(--yellow);
-    font-size: 12px;
-    font-weight: var(--bold);
-    color: var(--blue);
-    text-align: center;
-  }
-  &:hover {
-    color: var(--yellow);
-  }
-}
-
-//_Navigation menu:
-.nav-menu {
-  display: flex;
-  align-items: center;
-  &__link {
-    font-size: 17px;
-    padding: 1.4em 1.18em;
-    color: var(--white);
-    font-weight: var(--medium);
-    transition: all 0.3s;
-    //! Временные стили:
-    &[data-active] {
-      color: var(--yellow);
-    }
-    //!
-    &:hover {
-      color: var(--yellow);
-    }
-
-    @media (max-width: 1280px) {
-      font-size: 16px;
-    }
-  }
-  @media (max-width: 991px) {
-    z-index: 5;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transform: translateY(100%);
-    background-color: rgba(20, 20, 20, 0.95);
-    width: 100%;
-    flex-direction: column;
-    align-items: flex-start;
-    &__link {
-      width: 100%;
-    }
-  }
-}
-
-//_Dropdown toggle:
-.dropdown {
-  position: relative;
-  width: 100%;
-}
-.dropdown-toggle {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  font-family: var(--f-family-primary);
-  column-gap: 5px;
-  svg {
-    margin-top: 3px;
-  }
-  &:hover {
-    color: var(--yellow);
-  }
-  @media (max-width: 991px) {
-    justify-content: space-between;
-  }
-}
-
-//_Dropdown menu:
-.dropdown-menu {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transform: translateY(100%);
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  width: 445px;
-  padding: 20px 40px 30px;
-  border: 2px solid #fff;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 1px 1px 10px 0 rgb(0 0 0 / 17%);
-  &__column {
+  gap: 10px;
+  &__item {
     display: flex;
-    flex-direction: column;
-  }
-  &__title {
-    font-family: var(--f-family-secondary);
-    color: var(--blue);
-    font-size: 1.158rem;
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    text-transform: capitalize;
-    margin-bottom: 0.3em;
-  }
-  &__link {
-    transition: color 0.2s;
-    color: #1b3764;
-    font-size: 0.895rem;
-    font-weight: 500;
-    padding: 10px 0;
-    letter-spacing: 0.01em;
-    text-transform: capitalize;
-    transition: color 0.3s;
-    &:hover {
-      color: var(--yellow);
+    align-items: center;
+    justify-content: center;
+    font-size: toRem(16);
+    height: toEm(45, 16);
+    width: toEm(45, 16);
+    transition: all 0.3s;
+
+    @media (max-width: 479px) {
+      font-size: toRem(15);
     }
-  }
-  @media (max-width: 991px) {
-    position: relative;
-    transform: translateY(0%);
-    width: 100%;
-    background-color: var(--black);
-    border-color: var(--black);
-    &__title,
-    &__link {
+    &_w {
+      color: var(--blue);
+      background-color: var(--white);
+      border: 2px solid var(--white);
+      &:hover {
+        background-color: var(--yellow);
+        border-color: var(--yellow);
+      }
+    }
+    &_b {
       color: var(--white);
+      border: 1px solid var(--yellow);
+      background-color: transparent;
+      &:hover {
+        background-color: var(--yellow);
+      }
     }
-    &__link {
-      font-size: 0.789rem;
-    }
-    &__title {
-      font-size: 1.053rem;
-    }
-  }
-  @media (max-width: 767px) {
-    grid-template-columns: 100%;
-    row-gap: 30px;
   }
 }
 
@@ -321,37 +177,6 @@ h6 {
   flex-shrink: 0;
   background-color: var(--yellow);
   margin-top: 4px;
-}
-
-//_Section title:
-.section-title {
-  text-align: center;
-  &_left {
-    text-align: left;
-  }
-  &__text {
-    font-size: 42px;
-    font-weight: var(--bold);
-    text-transform: capitalize;
-    color: var(--blue);
-    line-height: 1.2;
-    @media (max-width: 767px) {
-      font-size: 32px;
-    }
-    @media (max-width: 479px) {
-      font-size: 28px;
-    }
-  }
-  &__line {
-    display: inline-block;
-    width: 50px;
-    height: 3px;
-    margin-top: 20px;
-    background-color: var(--yellow);
-    &_b {
-      background-color: var(--blue);
-    }
-  }
 }
 
 .book-collection {
@@ -403,7 +228,7 @@ h6 {
 
   &__title {
     display: inline-block;
-    font-size: 32px;
+    font-size: toRem(32);
     color: var(--blue);
     font-family: var(--f-family-secondary);
     font-weight: var(--bold);
@@ -411,10 +236,10 @@ h6 {
     letter-spacing: 0.01em;
     transition: color 0.3s;
     line-height: 1.2;
-    margin-bottom: 5px;
+    margin-bottom: toEm(5, 32);
 
     @media (max-width: 767px) {
-      font-size: 22px;
+      font-size: toRem(22);
     }
     &:hover {
       color: var(--yellow);
@@ -424,44 +249,71 @@ h6 {
   &__price {
     font-family: var(--f-family-primary);
     color: var(--yellow);
-    font-size: 22px;
+    font-size: toRem(22);
     font-weight: var(--bold);
     @media (max-width: 767px) {
-      font-size: 18px;
+      font-size: toRem(18);
     }
   }
 
   &__content {
     display: flex;
-    padding-top: 15px;
+    padding-top: toEm(15, 19);
     flex-direction: column;
-    gap: 20px;
+    gap: toEm(20, 19);
 
     @media (max-width: 767px) {
-      font-size: 17px;
+      font-size: toRem(17);
     }
   }
 
   &__annotation {
+    font-size: inherit;
     font-family: var(--f-family-primary);
     color: var(--grey);
     line-height: 1.5;
-    margin-bottom: 10px;
+    margin-bottom: toEm(10, 19);
   }
 
   &__format {
     display: flex;
     align-items: center;
-    gap: 10px;
+    font-size: toRem(24);
+    color: var(--blue);
+    gap: toEm(10, 24);
+    @media (max-width: 767px) {
+      font-size: toRem(20);
+    }
     h3 {
-      color: var(--blue);
-      font-size: 24px;
-      @media (max-width: 767px) {
-        font-size: 20px;
-      }
+      font-size: inherit;
     }
   }
   &__btn {
     align-self: start;
   }
 }
+
+//_Section grid:
+.section-grid {
+  display: grid;
+  justify-content: space-between;
+  align-items: center;
+  gap: 90px;
+  grid-template-columns: repeat(2, 1fr);
+  @media (max-width: 1279px) {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+}
+
+//_Image border:
+.image-border {
+  border: 10px solid var(--yellow);
+}
+
+//_Importing component styles:
+@import "./components/Header/Header.scss";
+@import "./components/PreviewArea/PreviewArea.scss";
+@import "./components/AuthorsBook/AuthorsBook.scss";
+@import "./components/AboutAuthor/AboutAuthor.scss";
+@import "./components/SectionTitle/SectionTitle.scss";
