--- a/src/components/AboutAuthor/AboutAuthor.scss
+++ b/src/components/AboutAuthor/AboutAuthor.scss
@@ -1,5 +1,5 @@
 .about-author {
-  padding: 140px 0;
+  background-color: var(--blue-light);
   &__wrap {
   }
 
@@ -15,7 +15,7 @@
 
   &__image-border {
     margin-left: 10px;
-
+    margin-top: 20px;
     img {
       position: relative;
       width: 100%;
@@ -30,12 +30,18 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    @media (max-width: 479px) {
+      gap: 20px;
+    }
   }
 
   &__details {
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(3, 1fr);
+    @media (max-width: 479px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__details-item {
@@ -43,6 +49,13 @@
     border-right: 1px solid #ffca42;
     margin-right: 10px;
     padding-right: 10px;
+
+    @media (max-width: 479px) {
+      border-right: none;
+      margin-right: 0;
+      padding-right: 0;
+    }
+
     &:last-child {
       border: none;
       margin-right: 0;
@@ -60,6 +73,12 @@
     font-size: toRem(55);
     line-height: 1.4;
     font-weight: var(--bold);
+    @media (max-width: 991px) {
+      font-size: toRem(45);
+    }
+    @media (max-width: 767px) {
+      font-size: toRem(35);
+    }
   }
 
   &__title {
@@ -67,40 +86,60 @@
     color: var(--grey);
     font-size: toRem(18);
     font-weight: var(--regular);
+    @media (max-width: 991px) {
+      font-size: toRem(17);
+    }
+    @media (max-width: 767px) {
+      font-size: toRem(15);
+    }
   }
 }
 .business-card {
+  font-size: 1rem;
   display: flex;
   align-items: center;
   gap: 40px;
   padding: 20px;
+  color: #b4c7e7;
   background-color: var(--blue);
+  @media (max-width: 767px) {
+    font-size: toRem(17);
+    gap: 20px;
+  }
+  @media (max-width: 479px) {
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+  }
   &__qr-code {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 130px;
-    height: 130px;
     background-color: var(--white);
-  }
 
-  &__content-wrap {
+    img {
+      max-width: 100%;
+      width: 130px;
+      padding: 15px;
+    }
   }
 
   &__title {
     color: var(--yellow);
     font-size: toRem(22);
     margin-bottom: toEm(10, 22);
+    @media (max-width: 767px) {
+      font-size: toRem(20);
+    }
   }
 
   &__contact {
-    color: #b4c7e7;
-    margin-bottom: 5px;
+    margin-bottom: toEm(5, 19);
     a {
-      font-size: 1rem;
+      font-size: inherit;
       transition: color 0.3s;
       color: #b4c7e7;
-      padding-left: 10px;
+      padding-left: toEm(10, 19);
       &:hover {
         color: var(--yellow);
       }
