--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,9 @@
     @media (max-width: 767px) {
       padding: 30px 0;
     }
+    @media (max-width: 767px) {
+      padding: 20px 0;
+    }
   }
 
   &__logo-wrap {
