--- a/src/components/SectionTitle/SectionTitle.scss
+++ b/src/components/SectionTitle/SectionTitle.scss
@@ -45,5 +45,8 @@
     padding-top: toEm(28, 19);
     line-height: 1.8;
     color: var(--grey);
+    @media (max-width: 479px) {
+      font-size: toRem(17);
+    }
   }
 }
