--- a/src/index.scss
+++ b/src/index.scss
@@ -306,6 +306,22 @@ h6 {
   }
 }
 
+.section-wrap {
+  padding: 140px 0;
+  @media (max-width: 1279px) {
+    padding: 100px 0;
+  }
+  @media (max-width: 991px) {
+    padding: 60px 0 80px;
+  }
+  @media (max-width: 767px) {
+    padding: 40px 0 60px;
+  }
+  @media (max-width: 479px) {
+    padding: 30px 0 40px;
+  }
+}
+
 //_Image border:
 .image-border {
   border: 10px solid var(--yellow);
