implementation of the partners section

--- a/src/index.scss
+++ b/src/index.scss
@@ -332,4 +332,6 @@ h6 {
 @import "./components/PreviewArea/PreviewArea.scss";
 @import "./components/AuthorsBook/AuthorsBook.scss";
 @import "./components/AboutAuthor/AboutAuthor.scss";
+@import "./components/Partners/Partners.scss";
+
 @import "./components/SectionTitle/SectionTitle.scss";
