implementation of the order section

--- a/src/index.scss
+++ b/src/index.scss
@@ -333,5 +333,6 @@ h6 {
 @import "./components/AuthorsBook/AuthorsBook.scss";
 @import "./components/AboutAuthor/AboutAuthor.scss";
 @import "./components/Partners/Partners.scss";
+@import "./components/Order/Order.scss";
 
 @import "./components/SectionTitle/SectionTitle.scss";
