start working on the learn section

--- a/src/index.scss
+++ b/src/index.scss
@@ -334,5 +334,6 @@ h6 {
 @import "./components/AboutAuthor/AboutAuthor.scss";
 @import "./components/Partners/Partners.scss";
 @import "./components/Order/Order.scss";
+@import "./components/Learn/Learn.scss";
 
 @import "./components/SectionTitle/SectionTitle.scss";
