--- a/src/components/AboutAuthor/AboutAuthor.scss
+++ b/src/components/AboutAuthor/AboutAuthor.scss
@@ -3,29 +3,6 @@
   &__wrap {
   }
 
-  &__image {
-    @media (max-width: 1279px) {
-      max-width: 50%;
-      justify-self: center;
-    }
-    @media (max-width: 991px) {
-      max-width: 100%;
-    }
-  }
-
-  &__image-border {
-    margin-left: 10px;
-    margin-top: 20px;
-    img {
-      position: relative;
-      width: 100%;
-      top: -20px;
-      right: 20px;
-      z-index: 2;
-      box-shadow: 0 0 20px 0 rgba(27, 55, 100, 0.3);
-    }
-  }
-
   &__content-wrap {
     display: flex;
     flex-direction: column;
@@ -42,6 +19,9 @@
     @media (max-width: 479px) {
       grid-template-columns: repeat(2, 1fr);
     }
+  }
+  &__image-wrap {
+    justify-self: center;
   }
 
   &__details-item {
