--- a/src/components/Learn/Learn.scss
+++ b/src/components/Learn/Learn.scss
@@ -3,22 +3,63 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-top: 50px; //!Временные стили
+    gap: 30px;
+    align-items: center;
+    @media (max-width: 1279px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__content-wrap {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    @media (max-width: 767px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__image-wrap {
+    display: flex;
+    justify-content: center;
+    @media (max-width: 1279px) {
+      order: -1;
+    }
   }
 
-  &__image-border {
+  &__image {
   }
 }
 
 .learn-step {
+  background-color: var(--blue-light);
+  padding: toEm(30, 24);
+  color: var(--blue);
+  font-size: toRem(24);
+  font-weight: var(--bold);
+
+  @media (max-width: 767px) {
+    font-size: toRem(20);
+  }
+
   &__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--yellow);
+    margin-bottom: toEm(30, 24);
+    h3 {
+      font-size: inherit;
+      line-height: 1.2;
+    }
   }
 
   &__description {
+    font-size: inherit;
+    line-height: 1.4;
+    text-transform: none;
   }
 }
