--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap");
 
 * {
   margin: 0;
@@ -38,8 +38,8 @@ ul {
   --grey: #969aa0;
 
   //_Fonts:
-  --f-family-primary: 'Inter', sans-serif;
-  --f-family-secondary: 'Cardo', serif;
+  --f-family-primary: "Inter", sans-serif;
+  --f-family-secondary: "Cardo", serif;
 
   --regular: 400;
   --medium: 500;
@@ -68,6 +68,7 @@ h6 {
   font-family: var(--f-family-secondary);
   text-transform: capitalize;
   font-weight: var(--bold);
+  color: var(--blue);
 }
 h1 {
   font-size: toRem(65);
@@ -130,6 +131,13 @@ h6 {
   }
   &_large {
     padding: toEm(20, 19) toEm(96, 19);
+    @media (max-width: 767px) {
+      font-size: toRem(17);
+    }
+    @media (max-width: 479px) {
+      width: 100%;
+      padding: 20px;
+    }
   }
 }
 
@@ -347,12 +355,13 @@ h6 {
 }
 
 //_Importing component styles:
-@import './components/Header/Header.scss';
-@import './components/PreviewArea/PreviewArea.scss';
-@import './components/AuthorsBook/AuthorsBook.scss';
-@import './components/AboutAuthor/AboutAuthor.scss';
-@import './components/Partners/Partners.scss';
-@import './components/Order/Order.scss';
-@import './components/Learn/Learn.scss';
+@import "./components/Header/Header.scss";
+@import "./components/PreviewArea/PreviewArea.scss";
+@import "./components/AuthorsBook/AuthorsBook.scss";
+@import "./components/AboutAuthor/AboutAuthor.scss";
+@import "./components/Partners/Partners.scss";
+@import "./components/Order/Order.scss";
+@import "./components/Learn/Learn.scss";
+@import "./components/Chapter/Chapter.scss";
 
-@import './components/SectionTitle/SectionTitle.scss';
+@import "./components/SectionTitle/SectionTitle.scss";
