--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,18 +1,22 @@
 //_Header:
 .header {
+  background-color: var(--blue);
   &__header-wrap {
     position: relative;
     display: flex;
     justify-content: space-between;
     padding: 40px 0;
+
     @media (max-width: 991px) {
       flex-direction: column;
       row-gap: 30px;
     }
+
     @media (max-width: 767px) {
       padding: 30px 0;
     }
-    @media (max-width: 767px) {
+
+    @media (max-width: 479px) {
       padding: 20px 0;
     }
   }
@@ -21,6 +25,7 @@
     display: flex;
     align-items: center;
     padding-right: 20px;
+
     @media (max-width: 991px) {
       justify-content: space-between;
       padding-right: 0;
@@ -29,6 +34,7 @@
 
   &__logo {
     padding-right: 35px;
+
     @media (max-width: 1280px) {
       padding-right: 20px;
     }
@@ -47,6 +53,7 @@
   &__btn {
     margin-left: 12px;
     padding: 13px 33px;
+
     @media (max-width: 1280px) {
       padding: 12px 25px;
       margin: 0;
@@ -63,6 +70,7 @@
 
   &__menu-button {
     display: none;
+
     @media (max-width: 991px) {
       cursor: pointer;
       display: flex;
@@ -77,12 +85,14 @@
       top: 50%;
       right: 0;
       transform: translateY(-50%);
-      transition: background-color 0.3s;
+      transition: background-color var(--t-duration);
+
       span {
         width: 15px;
         height: 3px;
         background-color: var(--white);
       }
+
       &[data-active="true"] {
         background-color: var(--black);
       }
@@ -93,13 +103,18 @@
 //_Shopping cart button
 .shopping-cart-button {
   position: relative;
-  font-size: 17px;
+  font-size: toRem(17);
   padding: toEm(8, 17) toEm(16, 17);
   margin-top: toEm(5, 17);
   margin-right: 1em;
   color: var(--white);
-  transition: all 0.3s;
+  transition: color var(--t-duration);
   line-height: 1;
+
+  &:hover {
+    color: var(--yellow);
+  }
+
   svg {
     margin-right: 0.5em;
   }
@@ -108,7 +123,7 @@
     position: absolute;
     top: 0;
     right: 6%;
-    font-size: 12px;
+    font-size: toRem(12);
     height: 1.5em;
     min-width: 1.5em;
     padding-left: 0.5em;
@@ -121,29 +136,20 @@
     color: var(--blue);
     text-align: center;
   }
-
-  &:hover {
-    color: var(--yellow);
-  }
 }
 
 //_Navigation menu:
 .nav-menu {
   display: flex;
   align-items: center;
-  font-family: var(--f-family-primary);
+
   &__link {
     font-size: toRem(17);
     padding: toEm(22, 17) toEm(20, 17);
     color: var(--white);
     font-weight: var(--medium);
-    transition: all 0.3s;
-    //! Временные стили:
+
     &[data-active] {
-      color: var(--yellow);
-    }
-    //!
-    &:hover {
       color: var(--yellow);
     }
 
@@ -163,6 +169,7 @@
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
+
     &__link {
       width: 100%;
     }
@@ -173,22 +180,31 @@
 .dropdown {
   position: relative;
   width: 100%;
+
   &__toggle {
     cursor: pointer;
     display: flex;
     align-items: center;
     column-gap: 0.3em;
+
+    span {
+      display: inline-block;
+    }
+
     svg {
       margin-top: 0.2em;
     }
+
     &:hover {
       color: var(--yellow);
     }
+
     @media (max-width: 991px) {
       justify-content: space-between;
     }
   }
 }
+
 //_Dropdown menu:
 .dropdown-menu {
   position: absolute;
@@ -199,33 +215,29 @@
   grid-template-columns: repeat(2, 1fr);
   width: 445px;
   padding: 20px 40px 30px;
-  border: 2px solid #fff;
+  border: 2px solid var(--white);
   border-radius: 5px;
-  background-color: #fff;
+  background-color: var(--white);
   box-shadow: 1px 1px 10px 0 rgb(0 0 0 / 17%);
 
   &__column {
     display: flex;
     flex-direction: column;
   }
+
   &__title {
-    font-family: var(--f-family-secondary);
-    color: var(--blue);
-    font-size: toRem(22);
-    font-weight: 700;
-    letter-spacing: 0.03em;
-    text-transform: capitalize;
     margin-bottom: 0.3em;
   }
+
   &__link {
-    transition: color 0.2s;
-    color: #1b3764;
+    transition: color var(--t-duration);
     font-size: toRem(17);
-    font-weight: 500;
+    font-weight: var(--medium);
     padding: 0.6em 0;
     letter-spacing: 0.01em;
     text-transform: capitalize;
-    transition: color 0.3s;
+    transition: color var(--t-duration);
+
     &:hover {
       color: var(--yellow);
     }
@@ -237,17 +249,21 @@
     width: 100%;
     background-color: var(--black);
     border-color: var(--black);
+
     &__title,
     &__link {
       color: var(--white);
     }
+
     &__link {
       font-size: toRem(15);
     }
+
     &__title {
       font-size: toRem(20);
     }
   }
+
   @media (max-width: 767px) {
     grid-template-columns: 100%;
     row-gap: 30px;
