--- a/src/pages/Home/PreviewArea/PreviewArea.scss
+++ b/src/pages/Home/PreviewArea/PreviewArea.scss
@@ -1,8 +1,15 @@
 .preview-area {
+  margin-top: -3px;
+  background-color: var(--blue);
+  padding: 40px 0 80px;
   color: var(--white);
 
   @media (min-width: 1279px) {
     padding: 100px 0;
+  }
+
+  @media (max-width: 767px) {
+    padding: 40px 0 30px;
   }
 
   &__wrap {
@@ -11,6 +18,7 @@
     justify-content: space-between;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 16px;
+
     @media (max-width: 1279px) {
       grid-template-columns: 1fr;
       justify-content: center;
@@ -21,6 +29,7 @@
     display: flex;
     flex-direction: column;
     max-width: 615px;
+
     @media (max-width: 1279px) {
       justify-self: center;
     }
@@ -28,55 +37,33 @@
 
   &__subtitle {
     position: relative;
-    font-size: toRem(24);
-    font-family: var(--f-family-secondary);
+    color: var(--white);
     font-style: italic;
     font-weight: var(--regular);
-    letter-spacing: 0.05em;
     text-transform: capitalize;
     padding-left: toEm(50, 24);
     margin-bottom: toEm(15, 24);
+
     &::after {
-      font-size: inherit;
-      position: absolute;
+      content: "";
       top: 50%;
       left: 0;
+      font-size: inherit;
+      position: absolute;
       transform: translateY(-50%);
-      content: "";
       width: toEm(32, 24);
       height: 2px;
       background-color: var(--yellow);
     }
-    @media (max-width: 767px) {
-      font-size: toRem(22);
-    }
   }
 
   &__title {
-    color: var(--white);
-    letter-spacing: -0.02em;
-    line-height: 110%;
     margin-bottom: toEm(30, 65);
-    @media (max-width: 991px) {
-      font-size: toRem(50);
-    }
-    @media (max-width: 991px) {
-      font-size: toRem(45);
-    }
-    @media (max-width: 479px) {
-      font-size: toRem(32);
-    }
   }
 
   &__content {
-    font-size: 1rem;
     margin-bottom: 2.6em;
-    @media (max-width: 991px) {
-      font-size: toRem(18);
-    }
-    @media (max-width: 991px) {
-      font-size: toRem(17);
-    }
+
     p {
       line-height: 180%;
       color: var(--blue-middle);
@@ -89,6 +76,7 @@
     align-items: center;
     gap: 40px;
     margin-bottom: 50px;
+
     @media (max-width: 767px) {
       gap: 30px;
     }
@@ -104,6 +92,7 @@
     @media (max-width: 1279px) {
       justify-self: center;
     }
+
     img {
       box-shadow: -1px 2px 11px 5px rgba(0, 0, 0, 0.2);
       width: 592px;
@@ -115,24 +104,23 @@
 .dowland-link {
   position: relative;
   color: var(--white);
-  text-transform: capitalize;
   font-family: var(--f-family-secondary);
   font-weight: var(--bold);
   line-height: 125%;
   padding: 0 3px 3px;
-  transition: color 0.3s;
+
   &::before {
+    content: "";
     position: absolute;
     bottom: 0;
     left: 0;
-    content: "";
     width: 100%;
     height: 1px;
     background-color: var(--white);
-    transition: background-color 0.3s;
+    transition: background-color var(--t-duration);
   }
+
   &:hover {
-    color: var(--yellow);
     &::before {
       background-color: var(--yellow);
     }
@@ -142,8 +130,9 @@
 .preview-book-details-wrap {
   display: flex;
   justify-content: space-between;
-  gap: 20px;
   flex-wrap: wrap;
+  gap: 20px;
+
   @media (max-width: 479px) {
     justify-content: start;
   }
@@ -153,29 +142,18 @@
   display: flex;
   column-gap: 10px;
   padding-bottom: 20px;
-  &__content-wrap {
-  }
 
   &__title {
     line-height: 1;
-    color: #fff;
-    font-size: toRem(24);
-    font-weight: var(--bold);
-    letter-spacing: 0.02em;
     margin-bottom: toEm(10, 24);
-    @media (max-width: 767px) {
-      font-size: toRem(20);
-    }
+  }
+
+  &__marker {
+    margin-top: 3px;
   }
 
   &__content {
-    font-family: var(--f-family-primary);
-    font-size: toRem(18);
-    font-weight: var(--regular);
     color: var(--blue-middle);
     line-height: 170%;
-    @media (max-width: 767px) {
-      font-size: toRem(17);
-    }
   }
 }
