--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,3 +5,4 @@
 @import "./Order/Order.scss";
 @import "./Learn/Learn.scss";
 @import "./Chapter/Chapter.scss";
+@import "./Testimonial/Testimonial.scss";
