implementation of the home-blog section

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,3 +6,4 @@
 @import "./Learn/Learn.scss";
 @import "./Chapter/Chapter.scss";
 @import "./Testimonial/Testimonial.scss";
+@import "./HomeBlog/HomeBlog.scss";
