--- a/src/pages/Home/AuthorsBook/AuthorsBook.scss
+++ b/src/pages/Home/AuthorsBook/AuthorsBook.scss
@@ -25,30 +25,46 @@
 
 .book-collection-item {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   gap: 30px;
   max-width: 620px;
 
   @media (max-width: 1279px) {
     max-width: 100%;
+    justify-content: start;
   }
 
   @media (max-width: 767px) {
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     gap: 15px;
   }
 
   &__image,
   &__listing {
     width: 50%;
-    @media (max-width: 767px) {
+  }
+
+  &__listing {
+    padding-top: 30px;
+
+    @media (max-width: 1279px) {
       width: 100%;
+    }
+    @media (max-width: 767px) {
+      padding-top: 0;
     }
   }
 
   &__image {
+    @media (max-width: 1279px) {
+      flex: 0 0 33.333%;
+    }
+
+    @media (max-width: 479px) {
+      width: 100%;
+    }
+
     img {
       width: 100%;
       box-shadow: 0 0 11px 0 rgba(0, 0, 0, 0.2);
