--- a/src/pages/Home/HomeBlog/HomeBlog.scss
+++ b/src/pages/Home/HomeBlog/HomeBlog.scss
@@ -41,7 +41,7 @@
   &__image {
     position: relative;
     display: block;
-    flex: 1 1 83.4%;
+    flex: 0 0 33.333%;
     padding-bottom: 83.4%;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
@@ -114,7 +114,7 @@
     }
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       bottom: 0;
       left: 0;
@@ -123,6 +123,7 @@
       background-color: var(--blue);
       transition: background-color var(--t-duration);
     }
+
     &:hover {
       &::before {
         background-color: var(--yellow);
