--- a/src/pages/Home/AuthorsBook/AuthorsBook.scss
+++ b/src/pages/Home/AuthorsBook/AuthorsBook.scss
@@ -18,8 +18,11 @@
   gap: 20px;
 
   @media (max-width: 1279px) {
-    flex-direction: column;
     gap: 40px;
+  }
+
+  @media (max-width: 767px) {
+    flex-direction: column;
   }
 }
 
@@ -31,12 +34,11 @@
 
   @media (max-width: 1279px) {
     max-width: 100%;
-    justify-content: start;
+    flex-direction: column;
+    align-items: center;
   }
 
   @media (max-width: 767px) {
-    flex-direction: column;
-    align-items: center;
     gap: 15px;
   }
 
@@ -71,12 +73,24 @@
     }
   }
 
+  &__detail {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    @media (max-width: 1279px) {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+  }
+
   &__title {
     display: inline-block;
     font-size: toRem(32);
-    margin-bottom: toEm(5, 32);
 
-    @media (max-width: 767px) {
+    @media (max-width: 991px) {
       font-size: toRem(24);
     }
   }
