implementation of the Subscription section

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,7 @@ ul {
   --white: #ffffff;
   --beige: #f6f8fc;
   --grey: #969aa0;
+  --grey-light: #dce1e9;
 
   //_Fonts:
   --f-family-primary: "Inter", sans-serif;
