--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -7,3 +7,4 @@
 @import "./Chapter/Chapter.scss";
 @import "./Testimonial/Testimonial.scss";
 @import "./HomeBlog/HomeBlog.scss";
+@import "./Subscription/Subscription.scss";
