--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Inter:wght@400;500;600;700;800&display=swap');
 //_SCSS Functions:
 @function toRem($value) {
   $remValue: ($value / 19) + rem;
@@ -66,8 +66,8 @@ ul {
   --grey-light: #dce1e9;
 
   //_Fonts:
-  --f-family-primary: "Inter", sans-serif;
-  --f-family-secondary: "Cardo", serif;
+  --f-family-primary: 'Inter', sans-serif;
+  --f-family-secondary: 'Cardo', serif;
 
   --regular: 400;
   --medium: 500;
@@ -200,8 +200,7 @@ h6,
     align-items: center;
     justify-content: center;
     font-size: toRem(16);
-    height: toEm(45, 16);
-    width: toEm(45, 16);
+
     transition: background-color var(--t-duration);
 
     @media (max-width: 479px) {
@@ -209,6 +208,8 @@ h6,
     }
 
     &_w {
+      height: toEm(45, 16);
+      width: toEm(45, 16);
       background-color: var(--white);
       border: 2px solid var(--white);
 
@@ -220,6 +221,8 @@ h6,
     }
 
     &_b {
+      height: toEm(55, 16);
+      width: toEm(55, 16);
       border: 1px solid var(--yellow);
       background-color: transparent;
       color: var(--white);
@@ -304,7 +307,7 @@ h6,
 }
 
 //_Importing component styles:
-@import "./components/Header/Header.scss";
-@import "./pages/Home/Home.scss";
-@import "./components/SectionTitle/SectionTitle.scss";
-@import "./components/Footer/Footer.scss";
+@import './components/Header/Header.scss';
+@import './pages/Home/Home.scss';
+@import './components/SectionTitle/SectionTitle.scss';
+@import './components/Footer/Footer.scss';
